# learning_rust

./: Cargo.toml  README.md
basicRUST/: Cargo.toml
basicRUST/src/: collections.rs  enums.rs  errorHandling.rs  functions.rs  hashmaps.rs  if-else.rs  loops.rs  structs.rs  variables.rs  vectors.rs
basic_auth/: Cargo.toml
basic_auth/src/: main.rs
chat_cli/: readme.md
chat_cli/client/src/: main.rs
chat_cli/server/src/: main.rs
compress/: Cargo.toml  readme.md
compress/src/: main.rs
csv_file_reader/: Cargo.toml  readme.md
csv_file_reader/src/: main.rs
dwd_img/: Cargo.toml
dwd_img/src/: main.rs
iron_api/: Cargo.toml  readme.md
iron_api/src/: handlers.rs  main.rs  models.rs
practiceCodes/: interleave.rs  mybox.rs  rotateVector.rs
snake_game_cli/: readme.md
snake_game_cli/src/: main.rs
snake_ui/: Cargo.toml  readme.md
snake_ui/src/: game.rs  snake.rs
toy_blockchain/: Cargo.toml  readme.md
toy_blockchain/src/: blockchain.rs  main.rs
unzip/: Cargo.toml  readme.md
unzip/src/: main.rs
