[package]
name = "iron_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version="0.4.42", features = ["serde"]}
env_logger = "0.11.8"
iron = "0.6.1"
logger = "0.4.0"
router = "0.6.0"
rustc-serialize = "0.3.25"
serde = {version="1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = {version="1.18.1", features = ["v4", "serde"]}
